CLIENT-872: fix jump orderbook

--- a/src/modules/dex/directives/orderBook/orderBook.less
+++ b/src/modules/dex/directives/orderBook/orderBook.less
@@ -8,6 +8,19 @@ w-dex-order-book {
   height: 100%;
   text-align: right;
 
+  &.pending {
+    .empty-block-container {
+      display: none;
+    }
+    w-loader {
+      display: block;
+    }
+  }
+
+  w-loader {
+    display: none;
+  }
+
   &.has-order-book {
     .empty-block-container {
       display: none;
